[tool.poetry]
name = "ml_learn"
version = "0.1.0"
description = "Interesting ML/DL repos - self play"
authors = ["N/A"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21.0"
scipy = "^1.7.0"
torch = "^2.0.0"
botorch = "^0.9.0"
gpytorch = "^1.9.0"
tqdm = "^4.64.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
